# Programming-I---Final-Project

real_estate_toolkit/: pyproject.toml
real_estate_toolkit/real_estate_toolkit/ml_models/outputs/: submission.csv
real_estate_toolkit/src/real_estate_toolkit/: main.py
real_estate_toolkit/src/real_estate_toolkit/agent_based_model/: consumers.py  house_market.py  houses.py  simulation.py
real_estate_toolkit/src/real_estate_toolkit/analytics/: exploratory.py
real_estate_toolkit/src/real_estate_toolkit/data/: cleaner.py  descriptor.py  loader.py
real_estate_toolkit/src/real_estate_toolkit/ml_models/: predictor.py
real_estate_toolkit/src/real_estate_toolkit/ml_models/outputs/: submission.csv
